# mcp-openfoodtox

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: project-structure.mdc
scripts/: install_to_claude_desktop.py  prompt_welcome.py  setup_db.py
src/mcp_openfoodtox/database/: connection.py  multi_sub_queries.py  queries.py
src/mcp_openfoodtox/tools/: get_genotox_details.py  get_opinions.py  get_risk_assessments.py  get_toxicity_endpoints.py  list_hazard_ids_by_assessment.py  list_substances_by_assessment.py  list_substances_by_class_and_safety.py  search_substance.py  substance_safety_assessment.py
src/mcp_openfoodtox/utils/: __init__.py  data_exploration.py  formatting.py
tests/test_database/: test_get_safety_assessment.py  test_list_substances_by_criteria.py  test_list_substances_by_study.py  test_query_by_compound.py  test_query_by_id.py  test_query_hazard_ids_by_assessment.py  test_search_substance.py
tests/test_tools/: test_search_substance.py
tests/test_utils/: test_formatting.py
